@@ -343,6 +343,13 @@ The compile-time options detailed below can be used to help improve
 build reproducibility or provide additional warning messages during
 compilation. Except as noted below, these are enabled by default for
 architectures that support them.
+.TP
+.B timeless
+This setting (disabled by default) adds
+.B \-Wdate\-time
+to \fBCPPFLAGS\fP.
+This will cause warnings when the \fB__TIME__\fP, \fB__DATE__\fP and
+\fB__TIMESTAMP__\fP macros are used.
 .
 .SH ENVIRONMENT
 There are 2 sets of environment variables doing the same operations, the
