@@ -46,6 +46,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Pass DEB_BUILD_OPTIONS to dpkg-buildflags in buildflags.mk, required to
     get noopt to work at all, for example.
   * Add a new dpkg-buildflags reproducible feature area:
+    - Add a new timeless feature, disabled by default, which will add
+      «-Wdate-time» to CPPFLAGS.
     Thanks to Paul Wise <pabs@debian.org>. Closes: #762683
 
   [ Raphaël Hertzog ]
